# project_fire

./: .gitignore  Dockerfile  docker-compose.yml  init_db.bat  init_db.sh  milestone_250426.md  project_plan.md  pyproject.toml  requirements.txt  start.bat  start.sh  stop.sh
src/: main.py
src/api/: api.py  dependencies.py
src/api/endpoints/: auth.py  categories.py  users.py
src/backend/: database.py  init_db.py  main.py  models.py  schemas.py  sfire.db
src/backend/routers/: auth.py
src/backend/routes/: post.py
src/core/: config.py
src/crud/: category.py
src/database/: erd.md  init.sql  privileges.sql  schema.sql  seed.sql  triggers.sql
src/models/: category.py
src/planning/: post_mvp_features.md  sfire_uv_planning_0509.md
src/schemas/: user.py
src/static/css/: login.css  main.css  member.css  post-detail.css  post-edit.css  post-list.css  post.css  register.css  style.css
src/static/fragments/: header.html
src/static/js/: fragments.js  main.js
src/templates/: base.html  index.html
src/templates/fragments/: footer.html  header.html
src/templates/member/: login.html  mypage.html  register.html
src/templates/post/: detail.html  edit.html  list.html  post_list.html  post_list_base.html
