[project]
name = "sfire-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.1",
    "email-validator==2.1.0.post1",
    "fastapi==0.104.1",
    "itsdangerous>=2.2.0",
    "jinja2==3.1.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "pymysql==1.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]
